--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal",
-  "homepage": "https://myqueensfield.com/",
+  "homepage": "/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
