--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "personal",
-  "homepage": "http://www.text.myqueensfield.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,7 +13,7 @@
     "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slideshow-image": "^4.0.3",
     "sass": "^1.53.0",
     "swiper": "^8.2.6",
