--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-scripts": "^5.0.1",
+    "react-scroll-to-top": "^3.0.0",
     "react-slideshow-image": "^4.0.3",
     "sass": "^1.53.0",
     "swiper": "^8.2.6",
